Fix low contrast for links

--- a/src/styles/settings/_settings.colors.scss
+++ b/src/styles/settings/_settings.colors.scss
@@ -9,7 +9,7 @@ $mariner: #2164bf;
 $fiord: #4a5669;
 $lynch: #627792;
 $athens-gray: #f6f6f7;
-$medium-purple: #7469e7;
+$ribbon-blue: #0055ff;
 
 $color-headings: $bright-gray;
 $color-text: $fiord;
@@ -18,7 +18,7 @@ $color-active: $fiord;
 
 $color-light-background: $athens-gray;
 
-$color-link: $medium-purple;
+$color-link: $ribbon-blue;
 $color-link-hover: darken($color-link, 15%);
 $color-link-active: darken($color-link, 25%);
 
@@ -28,4 +28,4 @@ $color-link-alt-active: darken($color-link-alt, 25%);
 
 $color-selection: $pipi;
 
-$color-list-counter: $medium-purple;
+$color-list-counter: $ribbon-blue;
